sbrn-backend/adduser.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: adduser
  namespace: suborna
spec:
  replicas: 2 
  selector: 
    matchLabels:
      app: adduser-express 
  template: 
    metadata: 
      labels: 
        app: adduser-express 
    spec:
      containers: # Fixed: Moved back to align with initContainers
        - name: adduser-container 
          image: adduser
          imagePullPolicy: Never 
          resources:
            requests:
              memory: "100Mi"
              cpu: "1"
            limits:
              memory: "200Mi"
              cpu: "2"
          ports:
            - containerPort: 4045
