sbrn-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
 name: express-deploy 
spec:
 replicas: 2 
 selector:
  matchLabels:
   app: express   
 template:
    metadata: 
     labels:
      app: express
    spec: 
     containers:
      - name: express-container 
        image: express-sbrn 
        imagePullPolicy: Never 
        ports:
         - containerPort: 3075
