sbrn-backend/depsrv.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
 name: suborna-backend 
spec: 
  replicas: 3 
  selector:
     matchLabels: 
       app: sn-express 
  template:
    metadata: 
      labels: 
        app: sn-express
    spec:
      containers:
      - name: suborna-container 
        image: suborna-love 
        imagePullPolicy: Never
        ports:
        - containerPort: 5057
