sbrn-backend/gtuser.yaml
apiVersion: apps/v1 
kind: Deployment
metadata: 
  name: getuser-backend 
  namespace: suborna
spec:
  replicas: 2 
  selector: 
    matchLabels: 
      app: getuser-express 
  template:
    metadata: 
      labels: 
        app: getuser-express 
    spec:
      containers: 
      - name: getuser-container 
        image: getservice
        resources:
          requests:
            memory: "100Mi"
            cpu: "50m"
          limits:
            memory: "200Mi"
            cpu: "200m"
        imagePullPolicy: Never 
        ports: 
        - containerPort: 4047
