sbrn-backend/pgone.yaml
apiVersion: apps/v1 
kind: Deployment
metadata: 
  name: postgres 
spec: 
  replicas: 1 
  selector: 
    matchLabels: 
      app: postgres 
  template: 
    metadata: 
      labels: 
        app: postgres 
    spec: 
      containers:
        - name: postgres-container
          image: postgres:15 
          ports:
            - containerPort: 5432 
          volumeMounts:
            - name: postgres-volume 
              mountPath: /var/lib/postgresql/data 
      volumes: 
        - name: postgres-volume 
          persistentVolumeClaim: 
            claimName: sbrn-pvc
