sbrn-backend/practice.yaml
#service yaml 

apiVersion: v1 
kind: Deployment 
metadata: 
 name: suborna-backend
spec: 
replicas: 3
selector: 
matchLabels:
 app: sbrn-express 
template: 
 metadata:
  labels: 
    app: sbrn-express 
  spec: 
  conatienrs: 
   - name: suboran-conatienr 
     image: suborna-;pve 
     imagePullPolicy: Never 
  ports:
  - containerPort: 5057
