sbrn-backend/servicepractice.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: suborna-backend
spec:
  replicas: 3
  selector:
    matchLabels: 
      app: srn-express
  template:
    metadata: 
      labels:
        app: srn-express 
    spec:
      containers:
      - name: suborna-containers
        image: suborna-love
        imagePullPolicy: Never 
        ports: 
        - containerPort: 5057
