sbrn-backend/vish.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: vish-stress
  namespace: suborna 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: vish-stress 
  template:
    metadata: 
      labels:
        app: vish-stress 
    spec:
      containers:
      - name: vish-container 
        image: polinux/stress 
        # We use command + args to ensure the binary is found
        command: ["stress"] 
        args:
          - "--cpu"
          - "1"
          - "--vm"
          - "1"
          - "--vm-bytes"
          - "250M"
          - "--timeout"
          - "3600s"
        resources:
          requests:
            cpu: "10m"
            memory: "20Mi"
          limits:
            cpu: "20m"
            memory: "40Mi" # Increased limit to prevent OOM
