sbrn-backend/adsrv.yaml
apiVersion: v1 
kind: Service 
metadata: 
 name: adsrv
 namespace: suborna 
spec:
  type: ClusterIP 
  selector:
    app: adduser-express 
  ports:
   - protocol: TCP 
     port: 70
     targetPort: 4045
