sbrn-backend/cnpgsrv.yaml
apiVersion: v1 
kind: Service 
metadata:
 name: pg-cluster-srv
spec:
  selector:
    cnpg.io/cluster: postgrescn 
  ports: 
   - port: 5432
     targetPort: 5432
