sbrn-backend/cnpgsrvo.yaml
apiVersion: v1 
kind: Service 
metadata: 
 name: pgcn-srv 
spec: 
   selector:
     cnpg.io/clser: postgrescn 
   ports:
    - port: 5432 
      targetPort: 5432
