sbrn-backend/getusersrv.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: gtsrv
spec:
  type: ClusterIP
  selector: 
    app: getuser-express 
  ports: 
  - protocol: TCP 
    port: 80 
    targetPort: 4047
