sbrn-backend/pgservice.yaml
apiVersion: v1 
kind: Service 
metadata: 
 name: pgservice
spec: 
   selector:
    app: postgres 
   ports:
    - port: 5432
      targetPort: 5432
