sbrn-backend/service.yaml
apiVersion: v1 
kind: Service 
metadata: 
 name: suborna-service 
spec:
   type: LoadBalancer
   selector:
     app: srn-express
   ports:
   - protocol: TCP
     port: 80
     targetPort: 5057
