sbrn-backend/srvone.yaml
apiVersion: v1 
kind: Service 
metadata: 
 name: suborna-servce 
spec: 
   type: LoadBalancer 
   selector: 
    app: sn-express
   ports:  
    - protocol: TCP 
      port: 80 
      targetPort: 5057
